added two new github names

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
           <div class="uk-form-controls">
             <select class="uk-select" id="form-stacked-select">
               <option value="antonfrancisjeejo">Anton Francis Jeejo NV</option>
-              <option value=" ">Bala Arun</option>
+              <option value="bala-arun-s">Bala Arun</option>
               <option value="ABIBV">Balaji Anand B</option>
               <option value="Balaji0112">Balaji G</option>
               <option value="Dharangan">Dharangan</option>
@@ -54,7 +54,7 @@
               <option value="roshinir1705">Roshini R</option>
               <option value="rupashri-s145">Rupa Shri</option>
               <option value="Joe-Ralph">Sahaya Joe Ralphin X</option>
-              <option value=" ">Sam Selvan</option>
+              <option value="reginasam2509">Sam Selvan</option>
               <option value="Sankareeswari-99">Sankareshwari M</option>
               <option value=" ">Saravanan B</option>
               <option value="shanthivalli">Shanthi A</option>
