--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
           success: (data, status) => {
             const code = data;
             $.ajax({
-              url: "http://localhost:3000/api/",
+              url: "http://172.21.0.251:3000/api/",
               type: "POST",
               data: {
                 code,
